# playmakerfsm-ui

./: .gitignore  CLAUDE.md  justfile  package.json  vite.config.ts
indexer/: Cargo.toml  config.json  justfile
indexer/src/: config.rs  enum_map.rs  main.rs  scan.rs  scene_lookup.rs
src/: app.css  app.html
src/lib/: ParamRow.svelte  actions.ts  data.ts  fmt.test.ts  fmt.ts  model.ts  openGroups.ts  pseudo.test.ts  pseudo.ts  scenes.test.ts  scenes.ts  store.test.ts
src/lib/__snapshots__/: store.test.ts.snap
src/lib/views/: FsmDetail.svelte  GraphView.svelte  PseudoView.svelte  RawView.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/[game]/: +layout.svelte  +page.svelte
src/routes/[game]/[[scene]]/: +page.svelte
src/routes/[game]/[scene]/[...rest]/: +page.svelte
src/routes/[game]/fsm/[hash]/: +page.svelte  +page.ts
src/routes/fsm/[game]/[hash]/: +page.svelte  +page.ts
static/data/: hk.tar.zst  ss.tar.zst
