[package]
name = "fsm-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotnetdll = "0.2"
playmakerfsm = { path = "../../playmakerfsm" }
rabex = "0.1"
rabex-env = { path = "../../rabex-env" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
